- karils set effect additions - staffs that save runes condition fixed - disabled being able to dspear the combat dummy - fixed up ::staff command - Daily Task base completed